--- a/antoxa.html
+++ b/antoxa.html
@@ -24,7 +24,7 @@
 
     <main>
         <section class="hero">
-            <img src="/img/antoxa.jpg" alt="Антоха">
+            <img src="/antoxa.jpg" alt="Антоха">
             <h1>Антоха</h1>
         </section>
 
