--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </p>
         </section>
         <section class="hero">
-            <img src="/img/kolyan_antoxa_vovan.jpeg" alt="Группа Реальные пацаны" class="hero">
+            <img src="/kolyan_antoxa_vovan.jpeg" alt="Группа Реальные пацаны" class="hero">
             
         </section>
 
@@ -47,7 +47,7 @@
         <section id="videos" class="videos">
             <h2>Видео</h2>
             <video controls>
-                <source src="/img/Реальные пацаны-Зацени[HD] (Official Music Video).mp4" type="video/mp4">
+                <source src="/Реальные пацаны-Зацени[HD] (Official Music Video).mp4" type="video/mp4">
                 Ваш браузер не поддерживает видео.
             </video>
         </section>
