--- a/kolyan.html
+++ b/kolyan.html
@@ -24,7 +24,7 @@
 
     <main>
         <section class="hero">
-            <img src="/kolayy.jpg" alt="Колян">
+            <img src="img/kolayy.jpg" alt="Колян">
             <h1>Колян</h1>
         </section>
 
