--- a/vovan.html
+++ b/vovan.html
@@ -24,7 +24,7 @@
 
     <main>
         <section class="hero">
-            <img src="/vovan.jpg" alt="Вован">
+            <img src="/img/vovan.jpg" alt="Вован">
             <h1>Вован</h1>
         </section>
 
